correct link for notes pictures

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <a href="arena.html"><div class="button arena"></div></a>
                 <a href="documental.html"><div class="button documental"></div></a>
                 <a href="becas.html"><div class="button becas"></div></a>
-                <a href="https://apveproxima.s3-eu-west-1.amazonaws.com/APVE+Web+Notes_Recomendaciones.png"><div class="button peguntas"></div></a>
-                <a href="https://apveproxima.s3-eu-west-1.amazonaws.com/APVE%2BWeb%2BNotes_Preguntas.png"><div class="button recomendaciones"></div></a>
+                <a href="assets/img/notes_recomendaciones.png"><div class="button peguntas"></div></a>
+                <a href="assets/img/notes_preguntas.png"><div class="button recomendaciones"></div></a>
             </div>
         </section>
     </body>
